// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should filter out contact_count and uncontacted_count for group 1`] = `
Object {
  "interactions": Object {
    "-456": Object {
      "P1W": Array [
        Object {
          "iconName": "spiritualConversationIcon",
          "id": "2",
          "num": 1,
          "requestFieldName": "uncontact_count",
          "translationKey": "interactionSpiritualConversation",
        },
      ],
    },
  },
  "summary": Object {},
}
`;

exports[`should update global impact reports 1`] = `
Object {
  "interactions": Object {},
  "summary": Object {
    "-": Object {
      "organization_id": null,
      "person_id": null,
      "type": "impact_report",
    },
  },
}
`;

exports[`should update group impact reports 1`] = `
Object {
  "interactions": Object {},
  "summary": Object {
    "-1234": Object {
      "organization_id": "1234",
      "person_id": null,
      "type": "impact_report",
    },
  },
}
`;

exports[`should update interaction reports 1`] = `
Object {
  "interactions": Object {
    "123-456": Object {
      "P1W": Array [
        Object {
          "iconName": "peopleIcon",
          "id": "100",
          "num": 1,
          "requestFieldName": "contact_count",
          "translationKey": "interactionAssignedContacts",
        },
      ],
    },
  },
  "summary": Object {},
}
`;

exports[`should update person impact reports 1`] = `
Object {
  "interactions": Object {},
  "summary": Object {
    "123-": Object {
      "organization_id": null,
      "person_id": "123",
      "type": "impact_report",
    },
  },
}
`;
